--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tiptap/extension-paragraph": "^2.12.0",
     "@twilio/voice-sdk": "^2.10.2",
     "@vueuse/integrations": "^10.3.0",
+    "echarts": "^6.0.0",
     "firebase": "^10.12.0",
     "frappe-ui": "0.1.248",
     "gemoji": "^8.1.0",
@@ -22,6 +23,7 @@
     "socket.io-client": "^4.7.2",
     "sortablejs": "^1.15.0",
     "vue": "^3.5.13",
+    "vue-echarts": "^8.0.1",
     "vue-router": "^4.2.2",
     "vuedraggable": "^4.1.0"
   },
